RESOLVED FIXED270224
Some Overlay Regions are missing for fixed elements
https://bugs.webkit.org/show_bug.cgi?id=270224
Summary Some Overlay Regions are missing for fixed elements
Etienne
Reported 2024-02-28 06:04:03 PST
Some Overlay Regions are missing for fixed elements
Attachments
Etienne
Comment 1 2024-02-28 06:24:58 PST
Etienne
Comment 2 2024-02-28 06:25:43 PST
EWS
Comment 3 2024-02-28 10:39:52 PST
Committed 275458@main (b6a2c84bcb5e): <https://commits.webkit.org/275458@main> Reviewed commits have been landed. Closing PR #25227 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.